--- a/list.html
+++ b/list.html
@@ -15,14 +15,14 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="./home.html"><img src="./images/favicon.svg" alt="icon" width="24" height="24" class="d-inline-block align-text-top"> Game Report</a>
+            <a class="navbar-brand" href="./index.html"><img src="./images/favicon.svg" alt="icon" width="24" height="24" class="d-inline-block align-text-top"> Game Report</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="./home.html"><i class="fas fa-home"></i> Home</a>
+                        <a class="nav-link" href="./index.html"><i class="fas fa-home"></i> Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categories</a>
